# kuber-map

./: .gitignore  .pre-commit-config.yaml  BACKLOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PLAN.md  README.md  ROADMAP.md  SECURITY.md  SPIKE_RESULTS.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  app.html  fibo-source.pin  index.html  m.html  manifest-m.json  manifest.json  okf.config.js  pyproject.toml  service-worker.js
.claude/: settings.json
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
contrib/: OUTREACH.md  README.md  bridge-brief.html  edm-council-proposal.md  edmc-bridge-contribution.md  fibo-bridges.ttl  render-brief.mjs  render-proposal.mjs
css/: style.css
curation/: bridges.json  definitions.json  derivatives-bridges.json  derivatives-examples.json  derivatives.json  examples.json  kyc-bridges.json  kyc-examples.json  kyc.json  loan-origination.json  notes.json  regulatory-reporting-bridges.json  regulatory-reporting-definitions.json  regulatory-reporting-examples.json  regulatory-reporting.json  securities-bridges.json  securities-examples.json  securities.json
docs/: Architecture.md  Getting-Started.md  README.md  Vision.md  mobile-audit.md
etl/: bridges.py  export_bridges.py  export_pack.py  extract.py  fibo_ns.py  mcp_server.py  nominate_core.py  retrieval.py  to_okf.py  validate.py
eval/: README.md  adapters.py  benchmark.json  derivatives-benchmark.json  harness.py  kyc-benchmark.json  openai_cli.py  regulatory-reporting-benchmark.json  securities-benchmark.json
js/: data.js  graph.js  sw-register.js
(+3466 files in other folders)
